deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera-collector-webapp
  labels:
    app: camera-collector-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camera-collector-webapp
  template:
    metadata:
      labels:
        app: camera-collector-webapp
    spec:
      containers:
      - name: camera-collector-webapp
        image: fogcat5/camera-collector-webapp:latest
        ports:
        - containerPort: 5000
