service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-webapp-service
spec:
  selector:
    app: collector-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
